<resources>
    <string name="app_name">SIPCDouban</string>
    <string name="hot_show">热映</string>
    <string name="search_movies">找片</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="search_hint">搜索内容</string>
    <string name="search_movie">找电影</string>
    <string name="search_tv">找电视</string>
    <string name="type_movie">电影</string>
    <string name="type_tv">电视</string>
    <string name="schedule">播出时间表</string>
    <string name="rank_list">豆瓣榜单</string>
    <string name="dou_ban_cai">豆瓣猜</string>
    <string name="movie_list">豆瓣片单</string>
    <string name="douban_hotshow">豆瓣热门</string>
    <string name="total">全部</string>
    <string name="type_2_1">美剧</string>
    <string name="type_2_2">日剧</string>
    <string name="type_1_1">悬疑片</string>
    <string name="type_1_2">喜剧片</string>
    <string name="browseByCategory">分类浏览</string>
    <string name="click_into">点击进入</string>
    <string name="movie_page">电影封面</string>
    <string name="douban_short_video">豆瓣视频</string>
    <string name="on_the_air">即将播出</string>
    <string name="movie_img">电影图片</string>
    <string name="updateTime">每周三更新</string>
    <string name="ranklist_2_1_name">华语口碑剧集榜</string>
    <string name="ranklist_2_2_name">全球口碑聚集帮</string>
    <string name="ranklist_1_1_name">一周口碑电影榜</string>
    <string name="ranklist250">豆瓣电影 Top250</string>
    <string name="ranklist_1_2_name">豆瓣电影Top250</string>
    <string name="search_bar_hint">电影/电视剧/影人</string>
    <string name="douBan_pingFen">豆瓣评分™</string>
    <string name="category_channel">所属频道</string>
    <string name="brief_introduction">简介</string>
    <string name="show_all_content">展开</string>
    <string name="tho_one_like_this_movie">喜欢这部电影的人也喜欢</string>
    <string name="tho_one_like_this_tv">喜欢这部电视的人也喜欢</string>
    <string name="back_btn">返回按钮</string>
    <string name="more">showMore</string>
    <string name="more_1">更多</string>
    <string name="movie">电影</string>
    <string name="pian_dan">片单</string>
    <string name="background_img">背景图片</string>
    <string name="photo">photo</string>
    <string name="video">video</string>
</resources>