<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:orientation="horizontal"
        tools:ignore="UselessParent">

        <TextView
            android:id="@+id/title"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:gravity="center_vertical"
            android:text="@string/browseByCategory"
            android:textColor="#000"
            android:textSize="@dimen/middle" />

        <TextView
            android:id="@+id/douban_hotshow_total"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_alignParentEnd="true"
            android:drawableEnd="@drawable/hotshow_prompt"
            android:gravity="center_vertical"
            android:text="@string/total"
            android:textColor="#000"
            android:textSize="@dimen/little"
            tools:ignore="RelativeOverlap" />
    </RelativeLayout>

    <TextView
        android:id="@+id/type_1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:drawableEnd="@drawable/hotshow_prompt"
        android:gravity="center_vertical"
        android:text="@string/type_1_1"
        android:textColor="#000"
        android:textSize="@dimen/little" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <include
            android:id="@+id/case1"
            layout="@layout/movie_item" />

        <include
            android:id="@+id/case2"
            layout="@layout/movie_item" />

        <include
            android:id="@+id/case3"
            layout="@layout/movie_item" />
    </LinearLayout>

    <TextView
        android:id="@+id/type_2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:drawableEnd="@drawable/hotshow_prompt"
        android:gravity="center_vertical"
        android:text="@string/type_1_2"
        android:textColor="#000"
        android:textSize="@dimen/little" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <include
            android:id="@+id/case4"
            layout="@layout/movie_item" />

        <include
            android:id="@+id/case5"
            layout="@layout/movie_item" />

        <include
            android:id="@+id/case6"
            layout="@layout/movie_item" />
    </LinearLayout>


</LinearLayout>